force-app/main/default/objects/Customer_Contact_Request__c/Customer_Contact_Request__c.object-meta.xml
<CustomObject>
    <label>Customer Contact Request</label>
    <nameField>
        <label>Customer Contact Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Contact Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>