force-app/main/default/objects/Customer_Contact_Request__c/fields/How_can_we_assist__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_assist__c</fullName>
    <label>How can we assist?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Demo on product/solution</fullName>
            </value>
            <value>
                <fullName>Help Selling A Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>