force-app/main/default/objects/Customer_Contact_Request__c/fields/I_m_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>I_m_Interested_In__c</fullName>
    <label>I&apos;m Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitors</fullName>
            </value>
            <value>
                <fullName>Projectors</fullName>
            </value>
            <value>
                <fullName>myViewboard Software</fullName>
                <label>myViewBoard Software</label>
            </value>
            <value>
                <fullName>Viewboard Interactive Displays</fullName>
                <label>ViewBoard Interactive Displays</label>
            </value>
            <value>
                <fullName>Large Format / Commercial Displays</fullName>
            </value>
            <value>
                <fullName>Pen Displays / eSignature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>