force-app/main/default/objects/Customer_Contact_Request__c/fields/MESSAGE_Please_provide_details_of_what__c.field-meta.xml
<CustomField>
    <fullName>MESSAGE_Please_provide_details_of_what__c</fullName>
    <label>MESSAGE (Please provide details of what</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>