force-app/main/default/objects/Customer_Contact_Request__c/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <formula>Sales_Rep__r.FirstName+&apos; &apos;+Sales_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Name</label>
    <type>Text</type>
</CustomField>