force-app/main/default/objects/Customer_Contact_Request__c/fields/Time_Zones__c.field-meta.xml
<CustomField>
    <fullName>Time_Zones__c</fullName>
    <label>Time Zones</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newfoundland</fullName>
            </value>
            <value>
                <fullName>Atlantic</fullName>
            </value>
            <value>
                <fullName>Eastern</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Pacific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>