force-app/main/default/objects/Customer_Contact_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Contact__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <portalRoleAndSubordinates>ViewsonicPartnerUser</portalRoleAndSubordinates>
    </sharedTo>
</ListView>