force-app/main/default/objects/Customer_Contact_Request__c/listViews/Open_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Company__c</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <columns>How_can_we_assist__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested,Message Sent,Appointment Made</value>
    </filters>
    <label>Open Requests</label>
    <language>en_US</language>
    <sharedTo>
        <group>Channel_Marketing</group>
    </sharedTo>
</ListView>