force-app/main/default/objects/Customer_Contact_Request__c/listViews/Open_Requests_Sales.listView-meta.xml
<ListView>
    <fullName>Open_Requests_Sales</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Contact__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Status__c</columns>
    <columns>Email__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested,Message Sent</value>
    </filters>
    <label>Open Requests</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>